# engine2024

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  contributing.md  imgui.ini  my_project.pak  readme.md  todo.md
.github/workflows/: build.yaml
libs/kpeeters/: readme.md
libs/kpeeters/include/kpeeters/: tree.hpp
libs/miniz/: CMakeLists.txt  miniz.c
libs/stb_image/: CMakeLists.txt
libs/stb_image_write/: CMakeLists.txt  stb_image_write.c
resources/shaders/: shader.frag  shader.vert
src/: engine.cpp  engine.h  lean_mean_windows.h  library.cpp  library.h  main.cpp  old_main.cpp  readme.md  reference_main.cpp  timing.cpp  util.h
src/core/: async_batch.h  container.h  functional.h  future.h  hash.h  lerp.h  newtype.h  parse.cpp  parse.h  random.cpp  random.h  rect.cpp  rect.h  resource_handle.h  signal.h  string.cpp  string.h  tagged_variant.h  unwrap.h  util.h
src/core/container/: ring_buffer.h  vec_map.h  vector_map.h
src/editor/: editor.cpp  editor.h  editor_command.h  editor_scene_view.cpp  editor_scene_view.h  editor_ui.cpp  editor_ui.h
src/editor/ui/: editor_fonts.h  editor_ui.cpp  editor_ui.h  log_window.cpp  log_window.h  main_menu_bar.cpp  main_menu_bar.h  scene_graph_window.cpp  scene_graph_window.h  scene_view.cpp  scene_view.h  scene_window.cpp  scene_window.h
src/engine/: animation.cpp  animation.h  editor.cpp  editor.h  editor_command.h  editor_ui.cpp  editor_ui.h  engine.cpp  engine.h  engine_api.cpp  engine_api.h  engine_state.h  game_state.cpp  game_state.h  hot_reloading.cpp  hot_reloading.h  project.cpp  project.h  project_state.h
src/engine/editor/: editor.cpp  editor.h  editor_command.h  editor_scene_view.cpp  editor_scene_view.h  editor_ui.cpp  editor_ui.h  resource.h
src/engine/state/: engine_resources.h  engine_state.h  game_state.cpp  project_state.cpp  project_state.h  scene_graph.cpp  scene_graph.h
src/engine/system/: animation.cpp  animation.h  hot_reloading.cpp  hot_reloading.h  text_system.cpp  text_system.h  timeline_system.cpp  timeline_system.h
src/platform/: animation.cpp  animation.h  assert.h  cli.cpp  cli.h  commands.cpp  commands.h  config.cpp  config.h  file.cpp  file.h  font.cpp  font.h  image.cpp  image.h  input.cpp  input.h  library_loader.cpp  library_loader.h  logging.cpp  logging.h  platform.cpp  platform.h  platform_api.cpp  platform_api.h  rect.cpp  rect.h  renderer.cpp  renderer.h  resource_handle.h  signal.h  tagged_variant.h  texture.cpp  texture.h  timing.cpp  timing.h  win32.cpp  win32.h  window.cpp  window.h  (+2 more)
src/platform/debug/: assert.h  imconfig.h  library_loader.cpp  library_loader.h  logging.cpp  logging.h
src/platform/file/: config.cpp  config.h  file.cpp  file.h  resource_loader.cpp  resource_loader.h  resource_manager.cpp  resource_manager.h  zip.cpp  zip.h
src/platform/graphics/: canvas.h  color.h  font.cpp  font.h  gl_context.cpp  gl_context.h  graphics_api.cpp  graphics_api.h  graphics_context.cpp  graphics_context.h  image.cpp  image.h  rect.cpp  rect.h  renderer.cpp  renderer.h  renderer_debug.h  shader_program.h  texture.cpp  texture.h  vertex.h  window.cpp  window.h
src/platform/input/: cli.cpp  cli.h  input.cpp  input.h  keyboard.cpp  keyboard.h  timing.cpp  timing.h
src/platform/os/: imwin32.cpp  imwin32.h  win32.cpp  win32.h
test/: dummy_test.cpp  keyboard_tests.cpp  main.cpp  mock_gl_context.h  resource_handler_tests.cpp  signal_tests.cpp  test_helper.cpp  test_helper.h
test/core/: async_batch_tests.cpp  future_tests.cpp  rect_tests.cpp  resource_handler_tests.cpp  signal_tests.cpp  tagged_variant_tests.cpp
test/core/container/: ring_buffer_tests.cpp  vec_map_tests.cpp  vector_map_tests.cpp
test/engine/: animation_tests.cpp  timeline_system_tests.cpp
test/libs/kpeeters/: tree_tests.cpp
test/platform/: imwin32_tests.cpp  keyboard_tests.cpp  resource_loader_tests.cpp  resource_manager_tests.cpp  tagged_variant_tests.cpp  zip_tests.cpp
